# MemeDetector

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/dicts/: userdict.txt
docs/: MVP设计方案.md  V3梗发现方案.md  grok搜索评估.md  初步设计.md  初步评估.md  评论证据包重构方案.md  语义聚类MVP方案.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  AppErrorBoundary.tsx  AppShell.tsx
frontend/src/data/: api.ts  types.ts
frontend/src/features/agents/: hooks.ts
frontend/src/features/candidates/: hooks.ts
frontend/src/features/dashboard/: hooks.ts
frontend/src/features/miner/: hooks.ts
frontend/src/features/pipeline/: hooks.ts
frontend/src/pages/: BundlesPage.tsx  CandidatesPage.tsx  DashboardPage.tsx  LibraryPage.tsx  MinerPage.tsx  PipelinePage.tsx  ScoutPage.tsx
frontend/src/ui/: AgentTracePanel.tsx  JsonPanel.tsx  PageSection.tsx  StatusTags.tsx
frontend/src/utils/: format.ts
meme_detector/: README.md  __main__.py  agent_tracing.py  config.py  http_client.py  llm_factory.py  logging_utils.py  pipeline_models.py  pipeline_service.py  reset_service.py  run_tracker.py  scheduler.py
meme_detector/api/: README.md  app.py  routes.py
meme_detector/api/static/: admin.css  admin.html  admin.js  candidate_sources.html  candidate_sources.js  candidates.html  candidates.js  conversations.html  conversations.js  miner.html  miner.js  scout.html  scout.js
meme_detector/archivist/: README.md  agent_store.py  burst_store.py  duckdb_store.py  embedding_cache.py  meili_store.py  miner_store.py  pipeline_run_store.py  research_store.py  schema.py  scout_store.py  sql_utils.py  text_norm.py
meme_detector/candidate_discovery/: __init__.py  burst_detector.py
meme_detector/miner/: README.md  __init__.py  analysis.py  bundler.py  models.py  persistence.py  scorer.py  video_context.py
meme_detector/researcher/: README.md  agent.py  bootstrap.py  decider.py  deep_analysis.py  models.py  persistence.py  screening.py  taxonomy.py  tools.py  video_context.py
meme_detector/scout/: README.md  collector.py  llm_analyzer.py  models.py  persistence.py  scorer.py  segmenter.py
tests/: test_admin.py  test_burst_detector.py  test_collector.py  test_comment_bundle_store.py  test_duckdb_store.py  test_llm_factory.py  test_llm_factory_prompt.py  test_logging_utils.py  test_meili_store.py  test_miner_bundler.py  test_miner_resume.py  test_miner_scorer.py  test_pipeline_models.py  test_researcher_agent.py  test_researcher_decider.py  test_researcher_persistence.py  test_researcher_screening.py  test_researcher_tools.py  test_run_tracker.py  test_scheduler.py  test_scorer.py  test_scout_danmaku.py  test_security.py  test_segmenter.py  test_taxonomy.py  test_video_context.py
tools/embedding_cluster_mvp/: README.md  annotate.py
tools/embedding_cluster_mvp/pipeline_v2/: __init__.py  community.py  embedder.py  evaluation.py  extractor.py  graph_builder.py  judge.py  load_corpus.py  run.py
tools/embedding_cluster_mvp/tests/: conftest.py  test_pipeline_v2.py
tools/m1a_smoke/: __main__.py
(+2 files in other folders)
